brain/sources/prod-metadata/objects/Interview_Evaluation__c/Interview_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Interview Evaluation</label>
    <nameField>
        <displayFormat>IEQ-{00000}</displayFormat>
        <label>Interview Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>