brain/sources/prod-metadata/objects/Interview_Evaluation__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>NoHire</fullName>
            </value>
            <value>
                <fullName>Retake</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>