brain/sources/prod-metadata/objects/Interview_Evaluation__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>