brain/sources/prod-metadata/objects/Interview_Evaluation__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Interview Evaluations</relationshipLabel>
    <relationshipName>Interview_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>