brain/sources/prod-metadata/objects/Interview_Evaluation__c/fields/Internal_Interview__c.field-meta.xml
<CustomField>
    <fullName>Internal_Interview__c</fullName>
    <label>Internal Interview</label>
    <referenceTo>Internal_Interview__c</referenceTo>
    <relationshipLabel>Interview Evaluations</relationshipLabel>
    <relationshipName>Interview_Evaluations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>